# erdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/cli/: cli_commands.rs  mod.rs
src/commands/: commands.rs  debug_event.rs  debug_request.rs  debug_response.rs  mod.rs
src/debug_adapter/: mod.rs
src/debugger/: config.rs  mod.rs
