[package]
name = "embedded-rust-debugger"
version = "0.1.0"
authors = ["Niklas <nicke.l@telia.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
probe-rs = "0.12.0"
gimli = "0.26.1"
object = "0.28.1"
memmap = "0.7"
structopt = { version = "0.3", default-features = false }
rustyline = "9.1.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
debugserver-types = "0.5"
serde_json = "1.0"
serde = "1.0"
capstone = "0.10.0"
crossbeam-channel = "0.5"
regex = "1"
chrono = "0.4"

#rust-debug = { path = "/home/niklas/Desktop/exjobb/rust-debug" }  
rust-debug = { git = "https://github.com/Blinningjr/rust-debug.git" }
