[package]
name = "erdb"
version = "0.2.2"
authors = ["Niklas Lundberg"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "A debugger for rust on embedded systems."
readme = "README.md"
homepage = "https://github.com/Blinningjr/erdb"
repository = "https://github.com/Blinningjr/erdb"
keywords = ["debugger", "debugging", "debug"]
categories = ["development-tools::debugging"]

[dependencies]
probe-rs = "0.13"
gimli = "0.26"
object = "0.29"
memmap = "0.7"
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
debugserver-types = "0.5"
serde_json = "1.0"
serde = "1.0"
capstone = "0.11"
regex = "1.6"
chrono = "0.4"
futures = "0.3"
async-std = "1.12"
clap = { version = "4.0", features = ["derive", "cargo"] }
shellwords = "1.1.0"
rustyline = "10.0.0"

# rust-debug = "0.1"
rust-debug = { path = "../rust-debug" }

